crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__action_accepted.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                        6 in the flock
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     0 error…
────────────────────────────────────────────────────────────────────────────────────────────────────
  ID    NAME               STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME  
   ██ FLOCK                                                                                         
  2     api                online           48299    2         -          -       241.0M    1h 18m  
  3     billing-reconcil…  online           48230    0         -          0.8%    96.0M     1h 29m  
  4     cron               online           48233    0         -          0.1%    8.0M      1h 31m  
  5     metrics            online           48240    0         -          0.4%    11.0M     1h 32m  
  0     web                online           48211    0         -          3.4%    182.0M    1h 25m  
  1     web                online           48212    0         -          2.9%    178.0M    1h 26m  
                                                                                                    
                                                                                                    
restart api (id 2): the shepherd restarted it                                        control enabled
