crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__close_dialog_floor.snap
---
source: crates/shep-cli/src/lookout/frames.rs
assertion_line: 3699
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                              6 in the flock
                                                                                          
 ██ api  (sheep config)  2 edits                                                          
   process   logging   inputs   restart   readiness   shutdown   watch   cron     tab nex…
  ────────────────────────────────────────────────────────────────────────────────────────
  FIELD                       VALUE                                                       
>  err_file                   (unset) -… FOCUSED  err_file  text                          
 ~ level_rules                []          Where stderr goes. Written out, the default is  
   merge_logs                 false       {{SHEP_HOME}}/logs/{{name}}-{{instance}}-err.log
   out_file                   (unset)                                                     
                                          now     (unset)                                 
  pending edits                           default (none)                                  
    cwd  (unset) -> /srv/api              example {{SHEP_HOME}}/logs/{{name}}-{{instance}…
    err_file  (unset) -> /var/log/api…                                                    
                                          ▲ respawn  the sheep must stop and start again  
  env                                              pick the timing when you close the pane
   DATABASE_URL               (set)                                                       
   NODE_ENV                   (set)       ────────────────────────────────────────────────
   + add a key                            VALIDATION                                      
 ▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜ 
 ▐  2 EDITS NEED A RESPAWN, 1 FIELD ALREADY DID api is online, pid 48219                ▌…
 ▐  cwd and err_file take hold when the process starts again.                           ▌ 
 ▐                                                                                      ▌ 
 ▐  R   restart now      stop, then start. The stop takes up to 1600ms.                 ▌…
 ▐  L   reload           the replacement starts alongside and takes over. No gap, if the▌ 
 ▐                       app sets SO_REUSEPORT itself.                                  ▌ 
 ▐  c   continue         write them and leave it running. They wait for a respawn.      ▌ 
 ▐                                                                                      ▌…
 ▐  esc  keep editing, write nothing   ·   this prompt expires in 10s ██████████        ▌─
 ▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟…
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
the dialog owns the keyboard until it is answered or it expires            control enabled
